# fastmcp-ironbook

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
examples/: README.md
examples/healthcare/: .env.example  README.md  mcp-config.example.json  requirements.txt  server.py
examples/healthcare/policies/: healthcare-policy.rego  prescriptions-policy.rego
