[project]
name = "fastmcp-ironbook"
version = "0.1.0"
description = "A simple FastMCP server with example tools"
authors = [{ name = "Ironbook Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "ironbook-sdk>=0.3.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

